@@ -7,7 +7,6 @@ plugins {
 //rootProject.name = 'SaveTree'
 version = '0.1'
 
-// Set source and output directories
 sourceSets {
     main {
         java {
@@ -18,36 +17,30 @@ sourceSets {
     }
 }
 
-// Java Toolchain Target
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
-// Enable --enable-preview for Java Compilation
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['--enable-preview']
 }
 
-// Enable --enable-preview when running via `gradle run`
 tasks.withType(JavaExec).configureEach {
     jvmArgs += ['--enable-preview']
     standardInput = System.in
     outputs.upToDateWhen { false }
 }
 
-// Enable --enable-preview during unit tests
 tasks.withType(Test).configureEach {
     jvmArgs += ['--enable-preview']
 }
 
-// Main class entry point (Synthetic class generated for src/Main.java)
 application {
     mainClass = 'Main'
 }
 
-// GraalVM Native Image Configuration
 graalvmNative {
     toolchainDetection = false
     binaries {
